# ResumeExtractor

./: .gitignore  manage.py  pyproject.toml
api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/middleware/: login_middleware.py
api/migrations/: 0001_initial.py  0002_alter_uploadedfile_id.py  0003_alter_uploadedfile_file.py  0004_alter_uploadedfile_id.py  0005_uploadedfile_in_progress_alter_education_degree_and_more.py  0006_rename_education_details_resume_educations_and_more.py  0007_alter_resume_file_alter_resume_id_and_more.py  0008_alter_resume_id_alter_uploadedfile_id.py  0009_uploadedfile_is_error_alter_resume_id_and_more.py  0010_alter_resume_id_alter_uploadedfile_id.py  0011_alter_resume_id_alter_uploadedfile_id.py  0012_uploadedfile_error_alter_resume_id_and_more.py  0013_uploadedfile_json_alter_resume_id_and_more.py  0014_alter_resume_id_alter_uploadedfile_id.py  0015_alter_resume_id_alter_uploadedfile_id.py  0016_alter_resume_id_alter_uploadedfile_id.py  0017_alter_experience_responsibilities.py  0018_resume_json.py  0019_remove_resume_educations_remove_resume_experiences_and_more.py  0020_jobdescription.py  0021_uploadedfile_is_job_description_and_more.py  0022_rename_location_jobdescription_address_and_more.py  0023_alter_jobdescription_id.py  0024_resume_more_contact_details.py  0025_jobdescription_email_and_more.py  0026_rename_experienceinmonths_jobdescription_max_experience_in_months_and_more.py  (+15 more)
resume-scanner/: package-lock.json  package.json  pnpm-lock.yaml
resume_scanner_api/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
